static/css/style.css
:root {
    --main-color: #1DA1F2;
    --main-bg-color: #e8ecf1;
    --preview-color: #839bfc;
    --text-color: #242424;
    --secondary-text-color: #666666;
}

.my-navbar {
    background-color: var(--main-color);
    padding: 0.3rem;
}

#navbar-title {
    font-size: 2.5em;
    margin-left: 70px;
    font-weight: bold;
    color: white;
}

#navbar-title:hover {
    color: #ffffff;
    
}

.open-source-link {
    text-decoration: none !important;
    color: var(--main-color);
}


.git-link {
    color: black;
    font-size: 20px;
    font-weight: 500;
    text-decoration: none !important;
    margin-right: 55px;
}

.git-link:hover {
    color: #ffffff;
    cursor: pointer;
}

.titles-container {

    display: flex;
    justify-content: left;
    margin-left: 60px;

}

#body {
    font-family: "Inter", sans-serif;
    font-size: 16px;
    line-height: 1.5;
    color: var(--text-color);
    background-color: var(--main-bg-color);
}

h1 {
    margin-top: 50px;
    font-size: 3em;
}

h3.second-header {
    margin-bottom: 100px;
    color: var(--secondary-text-color);
    font-size: 2em;
}

h3 {
    margin-bottom: 40px;
    color: white;
    font-size: 1.5em;
}


h2 {
    margin-bottom: 10px;
    font-size: 1.5em;
}




.form-box {
    border-radius: 10px;
    background-color: white;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    margin-left: 60px;
    padding: 30px;
}

.form-box:hover {
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
}


.my-btn {
    background-color: var(--main-color);
    padding: 10px 20px;
    border-radius: 10px;
    color: white;
    font-weight: 600;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
    cursor: pointer;
}

.my-btn:hover {
    box-shadow: 0 0 50px rgba(0, 0, 0, 0.2);
}

.btn-container {
    margin-top: 50px;
    margin-bottom: 10px;
    right: 0;
    text-align: right;
}

.preview-box {
    padding: 20px;
    padding-bottom: 60px;
    width: 80%;
    height: 100%;

    margin-left: 150px;
    border-radius: 10px;
    background-color: var(--main-color);
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

.preview-box:hover {
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
}

.preview {
    width: 85%;
    height: 85%;
    margin: 0 auto;
    padding: 40px;
    border-radius: 5px;
    background-color: white;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

.preview .proprio-name {
    font-size: 1em;
    margin: auto;
    text-align: left;
    font-weight: bold;
}

.preview .proprio-name:hover {
    color: #757575;
    cursor: pointer;
}

.preview .proprio-address {
    font-size: 0.8em;
    text-align: left;
}

.preview .proprio-address:hover {
    color: #757575;
    cursor: pointer;
}

.preview .locataire-name {
    font-size: 1em;
    margin: auto;
    text-align: right;
    font-weight: bold;
}

.preview .locataire-name:hover {
    color: #757575;
    cursor: pointer;
}

.preview .locataire-address {
    font-size: 0.8em;
    text-align: right;
}

.preview .locataire-address:hover {
    color: #757575;
    cursor: pointer;
}

.preview .month {
    margin-top: 80px;
    margin-bottom: auto;
    font-weight: bold;
}

.preview .date:hover {
    color: #757575;
    cursor: pointer;
}

.preview .periode {
    margin-top: 40px;
    text-align: left;
}

.preview .periode-elem {
    font-weight: bold;
}

.preview .periode-elem:hover {
    color: #757575;
    cursor: pointer;
}

.preview .calcul {
    margin-top: 100px;
    text-align: right;
}

.preview .loyer-ht {
    text-align: right;
}

.preview .hc-tag {
    float: left;
    font-weight: normal;
}

.preview .charges {
    text-align: right;
}

.preview .charges-tag {
    float: left;
    font-weight: normal;
}

.preview .total {
    text-align: right;
}

.preview .total-tag {
    float: left;
    font-weight: normal;
}

.price-elem {
    font-weight: bold;
}

.my-input {
    border-radius: 12px;
}

#total-input {
    text-align: left;
    font-weight: 600;
}

.my-form h2 {
    text-align: left;
}

.input-frame {
    border: 1px solid #ccc;
    padding: 5px;
    border-radius: 15px;
    margin: 25px 0;
    background-color: #e8ecf1;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
}

.input-frame:hover {
    border: 2px solid var(--main-color);
}

.date-label {
    float: left;
    margin-left: 15px;
    margin-bottom: 2px;
}

@media (max-width: 1280px) {
    .container {
        width: 90%;
    }

    #titles-container {
        font-size: 70%;
    }

    #github {
        display: none;
    }

    .main-container {
        display: flex;
        flex-direction: column;
    }

    .pdf {
        margin: 0 auto;
        width: 100%;
    }
}

@media (max-width: 768px) {
    .container {
        width: 90%;
    }

    .preview-box {
        display: none;
    }

    #titles-container {
        font-size: 70%;
    }

    .git-link {
        display: none;
    }

    .main-container {
        display: flex;
        flex-direction: column;
    }

    .pdf {
        margin: 0 auto;
        width: 100%;
    }
}

